# Rental-Property-Investing

./: README.md
notebooks/: analyze_rentals.ipynb
property_analysis-project/: pyproject.toml
property_analysis-project/PropertyAnalysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
property_analysis-project/analysis/: data.py  monthly_expenses.py  project_costs.py  rental_analysis.py  summary.py
